<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/select_appointment_date_str"
        android:textColor="@color/color_text_dark"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn">

    </TextView>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="42dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/set_date"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:src="@drawable/ic_set_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </ImageButton>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/select_appointment_time_str"
        android:textColor="@color/color_text_dark"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_date">

    </TextView>

    <Button
        android:id="@+id/morning"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/bg_button"
        android:text="@string/morning_str"
        android:textColor="@color/color_text_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/daytime"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/daytime_str"
        android:textColor="@color/color_text_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morning" />

    <Button
        android:id="@+id/evening"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/evening_str"
        android:textColor="@color/color_text_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daytime" />

    <Button
        android:id="@+id/button_submit"
        style="@android:style/Widget.Button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button"
        android:text="@string/next_button_str"
        android:textColor="@color/color_text_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>